option('nvmeu2', type: 'feature', value: 'enabled', description: 'Enable nvme u2 status Drive.',)
option('validate-unsecure-feature', type : 'feature', value : 'disabled', description : 'Enables unsecure features required by validation. Note: mustbe turned off for production images.',)
option('insecure-Drive-override', type : 'feature', value : 'disabled', description : 'Enables Drive override feature without any check.',)
