option ('platform_drive_location', type : 'string', value : '/xyz/openbmc_project/inventory/system/chassis/Baseboard_0', description : 'which board will  NVMe drives located in the system ')
option('drive_sanitize_time', type: 'integer',value: 30, description: 'the default sanitize time 30 seconds if it is not reported by drive')
option('identify_rsp_length', type: 'integer',value: 384, description: 'the default response length that identify command needs to receive')
